--- a/数据库知识/数据库事务，隔离级别，乐观锁，悲观锁.md
+++ b/数据库知识/数据库事务，隔离级别，乐观锁，悲观锁.md
@@ -104,19 +104,50 @@ INSERT INTO `student1` VALUES ('3', '小李', '14');
 
 
 
-#### 3.悲观锁和乐观锁
+### 有哪些锁（乐观锁悲观锁），select 时怎么加排它锁？
 
-##### 悲观锁
+#### 悲观锁（Pessimistic Lock）
 
-​	正如其名，它指的是对数据被外界（包括本系统当前的其他事务，以及来自外部系统的事务处理）修改持保守态度，因此，在整个数据处理过程中，将数据处 于锁定状态。悲观锁的实现，**往往依靠数据库提供的锁机制**（也只有数据库层提供的锁机制才能真正保证数据访问的排他性，否则，即使在本系统中实现了加锁机 制，也无法保证外部系统不会修改数据）。
+==悲观锁的特点是先获取锁，再进行业务操作，==即“悲观”的认为获取锁是非常有可能失败的，因此要先确保获取锁成功再进行业务操作。==通常所说的“一锁二查三更新”即指的是使用悲观锁。通常来讲在数据库上的悲观锁需要数据库本身提供支持，即通过常用的select … for update操作来实现悲观锁。==当数据库执行select for update时会获取被select中的数据行的行锁，因此其他并发执行的select for update如果试图选中同一行则会发生排斥（需要等待行锁被释放），因此达到锁的效果。select for update获取的行锁会在当前事务结束时自动释放，因此必须在事务中使用。
 
-​	在悲观锁的情况下，为了保证事务的隔离性，就需要一致性锁定读。读取数据时给加锁，其它事务无法修改这些数据。修改删除数据时也要加锁，其它事务无法读取这些数据。
+这里需要注意的一点是不同的数据库对select for update的实现和支持都是有所区别的，例如oracle支持select for update no wait，表示如果拿不到锁立刻报错，而不是等待，MySQL就没有no wait这个选项。==另外MySQL还有个问题是select for update语句执行中所有扫描过的行都会被锁上，这一点很容易造成问题。因此如果在MySQL中用悲观锁务必要确定走了索引，而不是全表扫描。==
 
-##### 乐观锁
+#### 乐观锁（Optimistic Lock）
 
-​	相对悲观锁而言，乐观锁机制采取了更加宽松的加锁机制。悲观锁大多数情况下依靠数据库的锁机制实现，以保证操作最大程度的独占性。但随之而来的就是数据库性能的大量开销，特别是对长事务而言，这样的开销往往无法承受。
+乐观锁，也叫乐观并发控制，它假设多用户并发的事务在处理时不会彼此互相影响，各事务能够在不产生锁的情况下处理各自影响的那部分数据。在提交数据更新之前，每个事务会先检查在该事务读取数据后，有没有其他事务又修改了该数据。==如果其他事务有更新的话，那么当前正在提交的事务会进行回滚。==
 
-​	而乐观锁机制在一定程度上解决了这个问题。乐观锁，**大多是基于数据版本（ Version ）记录机制实现**。何谓数据版本？即为数据增加一个版本标识，在基于数据库表的版本解决方案中，一般是通过为数据库表增加一个 “version” 字段来实现。读取出数据时，将此版本号一同读出，之后更新时，对此版本号加一。此时，将提交数据的版本数据与数据库表对应记录的当前版本信息进行比对，如 果提交的数据版本号大于数据库表当前版本号，则予以更新，否则认为是过期数据。
+乐观锁的特点先进行业务操作，不到万不得已不去拿锁==。即“乐观”的认为拿锁多半是会成功的，因此在进行完业务操作需要实际更新数据的最后一步再去拿一下锁就好==。
+
+==乐观锁在数据库上的实现完全是逻辑的，不需要数据库提供特殊的支持。====一般的做法是在需要锁的数据上增加一个版本号，或者时间戳，然后按照如下方式实现：==
+
+乐观锁（给表加一个版本号字段） 这个并不是乐观锁的定义，给表加版本号，是数据库实现乐观锁的一种方式。
+
+```
+1. SELECT data AS old_data, version AS old_version FROM …;
+
+2. 根据获取的数据进行业务操作，得到new_data和new_version
+
+3. UPDATE SET data = new_data, version = new_version(这儿一般是old_version+1) WHERE version = old_version
+if (updated row > 0) {
+    // 乐观锁获取成功，操作完成
+} else {
+    // 乐观锁获取失败，回滚并重试
+}
+```
+
+==乐观锁在不发生取锁（数据资源）失败的情况下开销比悲观锁小，但是一旦发生失败回滚开销则比较大，因此适合用在取锁（数据资源）失败概率比较小的场景，可以提升系统并发性能==
+
+乐观锁还适用于一些比较特殊的场景，例如在业务操作过程中无法和数据库保持连接等悲观锁无法适用的地方。
+
+#### 总结
+
+悲观锁和乐观锁是数据库用来保证数据并发安全防止更新丢失的两种方法，例子在`select ... for update`前加个事务就可以防止更新丢失。悲观锁和乐观锁大部分场景下差异不大，一些独特场景下有一些差别，一般我们可以从如下几个方面来判断。
+
+- ==响应速度：==如果需要非常高的响应速度，建议采用乐观锁方案，成功就执行，==不成功就失败，不需要等待其他并发去释放锁。==
+- ==冲突频率：==如果冲突频率非常高，建议采用悲观锁，保证成功率，如果冲突频率大，乐观锁会需要多次重试才能成功，代价比较大。
+- ==重试代价：==如果重试代价大，建议采用悲观锁。
+
+
 
 
 
@@ -124,8 +155,16 @@ INSERT INTO `student1` VALUES ('3', '小李', '14');
 
 ##### 参考回答：
 
-第一范式：当关系模式R的所有属性都不能再分解为更基本的数据单位时，称R是满足第一范式，即属性不可分
+​	第一范式：当关系模式R的所有属性都不能再分解为更基本的数据单位时，称R是满足第一范式，即属性不可分
 
-第二范式：如果关系模式R满足第一范式，并且R得所有非主属性都完全依赖于R的每一个候选关键属性，称R满足第二范式
+​	第一范式的合理遵循需要根据系统的实际需求来定。比如某些数据库系统中需要用到“地址”这个属性，本来直接将“地址”属性设计成一个数据库表的字段就行。但是如果系统经常会访问“地址”属性中的“城市”部分，那么就非要将“地址”这个属性重新拆分为省份、城市、详细地址等多个部分进行存储，这样在对地址中某一部分操作的时候将非常方便。这样设计才算满足了数据库的第一范式，如下表所示。
+
+
+
+​	第二范式：如果关系模式R满足第一范式，并且R得所有非主属性都完全依赖于R的每一个候选关键属性，称R满足第二范式
+
+​	比如要设计一个订单信息表，因为订单中可能会有多种商品，所以要将订单编号和商品编号作为数据库表的联合主键。
+
+
 
 第三范式：设R是一个满足第一范式条件的关系模式，X是R的任意属性集，如果X非传递依赖于R的任意一个候选关键字，称R满足第三范式，即非主属性不传递依赖于键码
