--- a/数据库知识/数据库视图，存储过程等.md
+++ b/数据库知识/数据库视图，存储过程等.md
@@ -2,7 +2,7 @@
 
 #### 1.数据库视图
 
-视图是一个虚拟表（非真实存在），其本质是【根据SQL语句获取动态的数据集，并为其命名】，用户使用时只需使用【名称】即可获取结果集，并可以将其当作表来使用。**我们只能用来查询，不能insert，update等操作**
+视图是一个虚拟表（非真实存在），其本质是【根据SQL语句获取动态的数据集，并为其命名】，用户使用时只需使用【名称】即可获取结果集，并可以将其当作表来使用。
 
 [![复制代码](数据库视图，存储过程等.assets/copycode.gif)](javascript:void(0);)
 
@@ -138,3 +138,136 @@ END
 ```
 
 [![复制代码](数据库视图，存储过程等.assets/copycode-1566406311816.gif)](javascript:void(0);)
+
+
+
+#### 什么是临时表，临时表什么时候删除？
+
+临时表可以手动删除：
+
+```
+DROP TEMPORARY TABLE IF EXISTS temp_tb;
+```
+
+临时表只在当前连接可见，当关闭连接时，MySQL会自动删除表并释放所有空间。因此在不同的连接中可以创建同名的临时表，并且操作属于本连接的临时表。
+
+创建临时表的语法与创建表语法类似，不同之处是增加关键字TEMPORARY，如：
+
+```
+CREATE TEMPORARY TABLE tmp_table (
+	NAME VARCHAR (10) NOT NULL,
+	time date NOT NULL
+);
+select * from tmp_table;
+```
+
+##### 视图是虚表，操作视图会更新实体表的数据。
+
+视图跟其它实体表共享一个命名空间，因此不能与实体表重名 
+视图不会随着会话结束而消失
+
+临时表跟实体表是两个互不相干的两个表，因此不存在操作临时表会影响到实体表的情况。 
+会话结束临时表自动释放 
+临时表不是内存表，show tables无法查看临时表
+
+
+
+##### 临时表
+
+​    临时表与永久表相似，但临时表存储在 tempdb 中，当不再使用时会自动删除。 
+    临时表有两种类型：本地和全局。它们在名称、可见性以及可用性上有区别。本地临时表的名称以单个数字符号 (#) 打头；它们仅对当前的用户连接是可见的；当用户从 SQL Server 实例断开连接时被删除。全局临时表的名称以两个数字符号 (##) 打头，创建后对任何用户都是可见的，当所有引用该表的用户从 SQL Server 断开连接时被删除。 
+    例如，如果创建了 employees 表，则任何在数据库中有使用该表的安全权限的用户都可以使用该表，除非已将其删除。如果数据库会话创建了本地临时表 #employees，则仅会话可以使用该表，会话断开连接后就将该表删除。如果创建了 ##employees 全局临时表，则数据库中的任何用户均可使用该表。如果该表在您创建后没有其他用户使用，则当您断开连接时该表删除。如果您创建该表后另一个用户在使用该表，则 SQL Server 将在您断开连接并且所有其他会话不再使用该表时将其删除。 
+
+##### 视图
+
+​    可以被看成是虚拟表或存储查询。除非是索引视图，否则视图的数据不会作为非重复对象存储在数据库中。数据库中存储的是 SELECT 语句。SELECT 语句的结果集构成视图所返回的虚拟表。用户可以采用引用表时所使用的方法，在 Transact-SQL 语句中引用视图名称来使用此虚拟表 
+    视图是一个虚拟表，其内容由查询定义。同真实的表一样，视图包含一系列带有名称的列和行数据。视图在数据库中并不是以数据值存储集形式存在，除非是索引视图。行和列数据来自由定义视图的查询所引用的表，并且在引用视图时动态生成。 
+对其中所引用的基础表来说，视图的作用类似于筛选。定义视图的筛选可以来自当前或其他数据库的一个或多个表，或者其他视图。分布式查询也可用于定义使用多个异类源数据的视图。例如，如果有多台不同的服务器分别存储您的单位在不同地区的数据，而您需要将这些服务器上结构相似的数据组合起来，这种方式就很有用。 
+    通过视图进行查询没有任何限制，通过它们进行数据修改时的限制也很少。 
+
+#### 应用场景
+
+##### 视图
+
+- 应用场景1：保密工作，比如有一个员工工资表，如果你只希望财务看到员工工资这个字段，而其他人不能看到工资字段，那就用一个视图，把工资这个敏感字段过滤掉 
+- 应用场景2（相当于子查询）：有一个查询语句非常复杂，大概有100行这么多，有时还想把这个巨大无比的select语句和其他表关联起来得到结果，写太多很麻烦，可以用一个视图来代替这100行的select语句，充当一个变量角色
+
+##### 临时表
+
+- 应用场景1：你在短期内有很多DML操作，比如京东淘宝亚马逊的购物车表，把东西放购物车（insert），变更数量（update），删除商品(delete)，一旦结算金钱后，这些数据就要清掉，这时需要用临时表（会员机制，收费不同，用临时表计算）
+- 应用场景2：在导出数据时，你可能不想导完整的数据库，或者表，你可能只想要导出符合某些条件的数据，那么你可以创建临时表，把select语句插入到临时表，接着导出这个临时表，导完以后通过结束session或者事务的方式，让这些没用的数据自动清理掉
+- 应用场景3：你在写存储过程时，有很多的连接，比如你需要连接A，B，C，d，E，F，G，H那么多张表，才能得到你的结果表，同时做连接的消耗太大，你可以先A，B，C连接的结果，放在临时表，接着再把这张临时表，跟d，E，F连接，作为新的结果放在临时表，接着再把临时表与G，H连接，最后得到临时表数据，一次插入到结果表（永久表）
+
+#### 视图操作
+
+```mysql
+##  玩转视图--demo  ##
+DROP TABLE IF EXISTS demo_student,demo_stuinfo;
+CREATE TABLE demo_student (stuno INT ,stuname NVARCHAR(60));
+CREATE TABLE demo_stuinfo (stuno INT ,class NVARCHAR(60),city NVARCHAR(60));
+INSERT INTO demo_student VALUES(1,'wanglin'),(2,'gaoli'),(3,'zhanghai');
+INSERT INTO demo_stuinfo VALUES(1,'wuban','henan'),(2,'liuban','hebei'),(3,'qiban','shandong');
+
+## 创建（OR REPLACE：如果存在则替换,【(id,NAME,glass)可以不要】）视图
+CREATE OR REPLACE VIEW view_stu_class(id,NAME,glass) AS SELECT demo_student.`stuno`,demo_student.`stuname`,demo_stuinfo.`class`
+FROM demo_student ,demo_stuinfo WHERE demo_student.`stuno`=demo_stuinfo.`stuno`;
+
+#describe view_stu_class;  ##显示视图的基本信息...
+#show table view_status like 'stu_class';  ##使用show方法显示视图的信息....
+#show create view view_stu_class;  ##显示视图的详细信息。显示视图名称基本信息+视图中内部操作的代码等等.
+
+##  CURD视图：
+#1、查询：
+select * from view_stu_class;
++----+----------+--------+
+| id | NAME     | glass  |
++----+----------+--------+
+|  1 | wanglin  | wuban  |
+|  2 | gaoli    | liuban |
+|  3 | zhanghai | qiban  |
++----+----------+--------+
+
+#3、更新视图数据（实体表数据同步变更）： -- 视图尽量用来查询，不要主动更新
+UPDATE view_stu_class SET NAME='Changed' WHERE id=1;
+
+#2、修改alter ：
+alter view view_stu_class as select stuno from demo_student;
+
+#4、删除视图：
+drop view if exists view_stu_class;
+```
+
+
+
+##### 临时表
+
+```mysql
+把一个数据表里的某个字段筛选出来然后，循环的把值传给另一个存储过程，选择使用了临时表。
+SQL代码如下：
+CREATE TABLE #Temp_TABLE
+( 
+ID INT IDENTITY(1,1),
+TRANSID VARCHAR(30), --出库单号
+PRIMARY KEY (ID)
+)
+INSERT INTO #Temp_TABLE
+SELECT TRANSID FROM A WHERE A.RPID='RP00913031200001'--从A表取出符合条件的数据插入到临时表
+```
+
+
+
+
+
+#### 小白问答
+
+![img](file:///C:\Users\Administrator\AppData\Roaming\Tencent\Users\1325075688\QQ\WinTemp\RichOle\`%3K2DRC$U[BCU6V{B0V4LO.png)
+
+小白：临时表这句话对吗
+
+二哥：。。。
+
+二哥：你说数组的深拷贝和浅拷贝有啥不同？
+
+小白：额，原来我理解错了，我刚才看见其他人对临时表insert操作了，我以为这个操作会同步到数据库.原来不是		这样的啊。临时表确实可以insert,update,但是现在它已经有自己的独立空间了，是吧。所以不会影响数据库。
+
+小白:临时表相当于深拷贝，试图相当于引用拷贝
