修改了好多东西，但是没有包括nginx，IO多路复用，跨域等知识

--- a/数据库知识/数据库事务，隔离级别，乐观锁，悲观锁.md
+++ b/数据库知识/数据库事务，隔离级别，乐观锁，悲观锁.md
@@ -168,3 +168,21 @@ if (updated row > 0) {
 
 
 第三范式：设R是一个满足第一范式条件的关系模式，X是R的任意属性集，如果X非传递依赖于R的任意一个候选关键字，称R满足第三范式，即非主属性不传递依赖于键码
+
+
+
+1. #### MySQL 4 种隔离级别
+
+   - 未提交读READ UNCOMMITTED：一个事务在提交之前，对其他事务是可见的，即事务可以读取未提交的数据。存在“脏读”（读到了脏数据）问题；
+   - 提交读READ COMMITTED：事务在提交之前，对其它事务是不可见的。存在“不可重复读”（两次查询的得到的结果可能不同，即可能在查询的间隙，有事务提交了修改）问题。解决了“脏读”问题。
+   - 可重复读REPEATABLE READ：在同一事务中多次读取的数据是一致的。解决了脏读和不可重复读问题，存在“幻读”（在事务两次查询间隙，有其他事务又插入或删除了新的记录）。--- MySQL默认隔离级别。
+   - 可串行化SERIALIZABLE：强制事务串行化执行。即一个事物一个事物挨个来执行，可以解决上述所有问题。
+
+2. #### 锁及粒度：
+
+   - 共享锁/读锁：互不阻塞，优先级低
+   - 排他锁/写锁：阻塞其他锁，优先级高，即确保在一个事务写入时不受其他事务的影响。
+   - 锁粒度：锁定的数据量越少（粒度越小），并发程度越高，但相应的加锁、检测锁、释放锁用的系统开销也随之增大。
+   - 锁策略：锁开销与数据安全性之间的平衡
+     - 表锁：锁住整张表，读锁互不阻塞，写锁阻塞其他所有读写锁（同一张表）。开销最小。
+     - 行级锁：对每一行数据（记录）加锁，开销大，并发程度高。
