--- a/数据库知识/数据库引擎.md
+++ b/数据库知识/数据库引擎.md
@@ -66,3 +66,26 @@
 #### 总结
 
 - 如果一个表修改要求高，我们选择InnoDB，因为InnoDB支持事务，如果我们查询要求比较高，我们选择MyISAM,因为MyISAM做的事少，所以MyISAM查询速度更快
+
+
+
+
+
+#### MySQL存储引擎简介
+
+- InnoDB,最为通用/推荐的一种引擎，支持事务、行级锁、==甚至间隙锁（避免幻读）==、支持热备份，MVCC，在并发上占优势，系统资源占用多。
+- MyISAM,默认的存储引擎，不支持事务和行级锁，只支持表锁，某些场景性能很好：占用存储上优，查询速度上完胜（大概是InnoDB的3倍）系统资源占用少。
+- InnoDB支持事务, MyISAM不支持；
+- InnoDB支持行级锁、表锁；MyISAM只支持表锁；
+- InnoDB支持MVCC，MyISAM不支持；
+- InnoDB不支持全文索引，MyISAM支持；
+- InnoDB支持外键，MyISAM不支持外键；
+- InnoDB和MyISAM都支持B+树索引，InnoDB还支持自适应哈希索引
+
+
+
+
+
+#### InnoDB对死锁的处理：
+
+​	此处死锁与OS死锁类似，多个事务互相持有对方所有要申请资源的锁不释放，造成环路死锁。MySQL InnoDB引擎检测到死锁循环依赖后，回滚持有最少行级锁的事务。
