--- a/数据库知识/数据库索引.md
+++ b/数据库知识/数据库索引.md
@@ -11,7 +11,7 @@
 - 全文索引：对文本的内容进行分词，进行搜索 
 
 *索引合并，使用多个单列索引组合搜索*
-*覆盖索引，select的数据列只用从索引中就能够取得，不必读取数据行，换句话说查询列要被所建的索引覆盖*
+*覆盖索引，select的数据列只用从索引中就能够取得，不必读取数据行，换句话说查询列要被所建的索引覆盖*:  **==避免全表扫描（索引覆盖扫描）；==**
 
 ```python
 PS：联合索引遵循最左前缀原则
@@ -202,7 +202,6 @@ select username, score from t1 where username = '小明'
 
   ![img](数据库索引.assets/464031-20180304135720670-811376052.png)
 
-   　　
 
   **2、堆上的非聚集索引**：叶节点存储的不是真正的数据，而是指向数据的指针，如下图所示：
 
@@ -260,7 +259,13 @@ select username, score from t1 where username = '小明'
 - B+树索引需要从根节点到枝节点，最后才能访问到页节点这样多次的IO访问;
 
 
+#### 为什么有了B+树索引还要hash索引？
 
+1. B+树默认有序，hash默认无序，所以哈希索引无法用于排序；
+2. 哈希索引O(1)在速度上毋庸置疑要快于B+树近似O(logn);
+3. 哈希索引只能进行等值查询（因为他要计算hash(key)再去匹配）而B+树索引可以进行等值、部分前缀、范围查询；
+4. 底层实现结构不同：B+树是非线性结构，hash桶是线性结构。
+5. 对于某些场景如热点页/活跃查询页，需要借助哈希索引来实现快速查询。
 
 
 
