各种知识都添加了一点

--- a/数据库知识/数据库事务，隔离级别，乐观锁，悲观锁.md
+++ b/数据库知识/数据库事务，隔离级别，乐观锁，悲观锁.md
@@ -83,15 +83,28 @@ https://blog.csdn.net/luzhensmart/article/details/84069469
 
 **很多人容易搞混不可重复读和幻读，确实这两者有些相似。**但不可重复读重点在于update和delete，而幻读的重点在于insert。
 
-CREATE TABLE `student1` (
-  `id` int(11) NOT NULL,
-  `name` varchar(50) NOT NULL,
-  `age` int(11) NOT NULL,
-  PRIMARY KEY (`id`)
+```python
+CREATE TABLE student1 (
+
+  id int(11) NOT NULL,
+
+  name varchar(50) NOT NULL,
+
+  age int(11) NOT NULL,
+
+  PRIMARY KEY (id)
+
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
-INSERT INTO `student1` VALUES ('1', '小明', '88');
-INSERT INTO `student1` VALUES ('2', '小红', '13');
-INSERT INTO `student1` VALUES ('3', '小李', '14');
+
+INSERT INTO student1 VALUES ('1', '小明', '88');
+
+INSERT INTO student1 VALUES ('2', '小红', '13');
+
+INSERT INTO student1 VALUES ('3', '小李', '14');
+
+```
+
+
 
 
 如果使用锁机制来实现这两种隔离级别，在可重复读中，该sql第一次读取到数据后，就将这些数据加锁，其它事务无法修改这些数据，就可以实现可重复 读了。但这种方法却无法锁住insert的数据，所**以当事务A先前读取了数据，或者修改了全部数据，事务B还是可以insert数据提交，**这时事务A就会 发现莫名其妙多了一条之前没有的数据，这就是幻读，不能通过行锁来避免。需要Serializable隔离级别 ，**读用读锁，写用写锁，读锁和写锁互斥**，这么做可以有效的避免幻读、不可重复读、脏读等问题，但会极大的降低数据库的并发能力。
